--- a/.travis.yml
+++ b/.travis.yml
@@ -31,6 +31,6 @@ matrix:
       osx_image: xcode9.3
       dist: trusty
       sudo: required
-      env: ACTION=test  PLATFORM=tvOS    DESTINATION='platform=tvOS Simulator,name=Apple TV 1080p'
+      env: ACTION=test  PLATFORM=tvOS    DESTINATION='platform=tvOS Simulator,name=Apple TV'
       script: set -o pipefail && xcodebuild -scheme SocketSwift -destination "$DESTINATION" $ACTION | xcpretty
 
