--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,8 @@ matrix:
             - sourceline: 'deb [trusted=yes] http://apt.orkhanalikhanov.com ./'
           packages:
             - libressl
-      install: eval "$(curl -sL https://gist.githubusercontent.com/kylef/5c0475ff02b7c7671d2a/raw/9f442512a46d7a2af7b850d65a7e9bd31edfb09b/swiftenv-install.sh)"
+      env: SWIFT_VERSION=5.0
+      install: eval "$(curl -sL https://swiftenv.fuller.li/install.sh)"
       script: env LD_LIBRARY_PATH='/usr/local/lib:/usr/local/opt/libressl/lib:$LD_LIBRARY_PATH' swift test
       
     - os: osx
